--- a/tuff_history/style.css
+++ b/tuff_history/style.css
@@ -18,6 +18,15 @@ img{
 	margin-top: 10px;
 }
 
+video{
+	loading: lazy;
+	display: block;
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+}
+
 hr{
 	border: 0;
 	height: 2px;
