--- a/templates/blog_style.css
+++ b/templates/blog_style.css
@@ -61,7 +61,6 @@ img{
 	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 10px;
 	margin-bottom: 6px;
 }
 
@@ -81,23 +80,9 @@ hr{
 	background-color: #c5d0d6;
 }
 
-.blog{
-	box-sizing: border-box;
-	width: 100%;
-	padding: 20px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	text-decoration: none;
-	color: #5C6A72;
-	border: 3px;
-	border-color: #a1a1a1;
-	border-style: solid;
-	border-radius: 20px;
-	display: inline-block;
+h2{
+	margin-bottom: 0px;
 }
-
-.blog:hover{
-	background-color: #efefef;
+h3{
+	margin-bottom: 0px;
 }
