--- a/templates/home_style.css
+++ b/templates/home_style.css
@@ -84,20 +84,21 @@ hr{
 .blog{
 	box-sizing: border-box;
 	width: 100%;
+
 	padding: 20px;
 	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-bottom: 20px;
+
 	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 16px;
+
 	text-decoration: none;
 	color: #5C6A72;
-	border: 3px;
-	border-color: #a1a1a1;
-	border-style: solid;
-	border-radius: 20px;
+	background-color: #efefef;
+	border-radius: 10px;
 	display: inline-block;
 }
 
 .blog:hover{
-	background-color: #efefef;
+	background-color: #dfdfdf;
 }
