--- a/templates/blog_header.html
+++ b/templates/blog_header.html
@@ -1,6 +1,7 @@
+<link rel="icon" type="image/png" href="../../icons/undefined.png">
 <header>
 	<a class="header-link" href="https://vespidian.github.io/Showcase/">Home</a>
 	<a class="header-link" href="https://github.com/Vespidian/">
-		<img src="../../icons/github.svg" align="left" style="height:32px;">
+		<img class="icon" src="../../icons/github.svg" align="left" style="height:32px;">
 	</a>
 </header>
