Lamp blog added

--- a/templates/blog_header.html
+++ b/templates/blog_header.html
@@ -1,7 +1,12 @@
-<link rel="icon" type="image/png" href="../../icons/undefined.png">
+<link rel="icon" type="image/png" href="../../icons/undefined.png" />
 <header>
-	<a class="header-link" href="https://vespidian.github.io/Showcase/">Home</a>
+	<a class="header-link" href="https://vespidian.github.io/">Home</a>
 	<a class="header-link" href="https://github.com/Vespidian/">
-		<img class="icon" src="../../icons/github.svg" align="left" style="height:32px;">
+		<img
+			class="icon"
+			src="../../icons/github.svg"
+			align="left"
+			style="height: 32px"
+		/>
 	</a>
 </header>
