--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <header>
-	<a class=\"header-link\" href="https://vespidian.github.io/Showcase/">Home</a>
+	<a class=\"header-link\" href="https://vespidian.github.io/">Home</a>
 	<a class=\"header-link\" href="https://github.com/Vespidian/">
 		<img class="icon" src=\"icons/github.svg\" align=\"left\" style=\"height:32px;\">
 	</a>
