Oops, blog pages need home icon too

--- a/templates/blog_header.html
+++ b/templates/blog_header.html
@@ -1,7 +1,14 @@
 <link rel="icon" type="image/png" href="../../icons/undefined.png" />
 <header>
-	<a class="header-link" href="https://vespidian.github.io/">Home</a>
-	<a class="header-link" href="https://github.com/Vespidian/">
+	<a title="Home" class="header-link" href="https://vespidian.github.io/">
+		<img
+			class="icon"
+			src="../../icons/home.svg"
+			align="left"
+			style="height:32px;"
+		/>
+	</a>
+	<a title="Check out my github!" class="header-link" href="https://github.com/Vespidian/">
 		<img
 			class="icon"
 			src="../../icons/github.svg"
