--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,8 @@
 <header>
-	<a class=\"header-link\" href="https://vespidian.github.io/">
+	<a title=\"Home\" class=\"header-link\" href="https://vespidian.github.io/">
 		<img class="icon" src=\"icons/home.svg\" align=\"left\" style=\"height:32px;\">
 	</a>
-	<a class=\"header-link\" href="https://github.com/Vespidian/">
+	<a title=\"Check out my github!\" class=\"header-link\" href="https://github.com/Vespidian/">
 		<img class="icon" src=\"icons/github.svg\" align=\"left\" style=\"height:32px;\">
 	</a>
 </header>
